Fixed spacing

--- a/edificios/edificio-a/styles.css
+++ b/edificios/edificio-a/styles.css
@@ -381,8 +381,8 @@ html {
 .info-route {
 
     margin: 2vh auto 0;
-    width: 32vh;
-    height: 18vh;
+    width: 26vh;
+    height: 16vh;
     max-width: 80vw;
 }
 
